2004-09-10  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/new_book_dialog.rb,
	  schemas/alexandria.schemas:

	Moved the CUECAT_DEV constant to a GConf variable.

2004-09-10  Zachary P. Landau  <kapheine@hypa.net> 

	* lib/alexandria/ui/new_book_dialog.rb,
	  data/alexandria/glade/new_book_dialog.glade

	Added CueCat support.
	  
	* data/alexandria/icons/cuecat.png,
	  data/alexandria/icons/cuecat_inactive.png:

	Added.

2004-09-08  Laurent Sansonetti  <lrz@gnome.org>

	* TODO:

	Updated.

	* make_release.sh:

	Improved.

	* lib/alexandria/book_providers.rb:

	- Fixed catching of the Timeout::Error exception ;
	- Added a $DEBUG trace before calling each provider. 

	* lib/alexandria/ui/main_app.rb:
		
	Set correct border width for toolitems.

2004-09-07  Laurent Sansonetti  <lrz@gnome.org>
	
	* data/alexandria/glade/main_app.glade:

	Removed the toolbar, popups and menubar definitions.

	* lib/alexandria/ui/main_app.rb:

	Introduced GtkUIManager to handle the toolbar, popups and
	menubar.

	* data/alexandria/ui/menus.xml,
	  data/alexandria/ui/popups.xml:

	Added.

2004-08-25  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui.rb:

	Removed '.rb' suffixes in require statements.
	
	* data/alexandria/glade/main_app.glade:

	Added a "Online Information at" menu item in the popup
	menu of a book.
	  
	* lib/alexandria/ui/main_app.rb:

	- Fills the "Online Information at" menu item ;
	- Fixed a bug when sorting by rating books that aren't rated yet ;
	- Refactored a bit.

	* lib/alexandria/book.rb:

	Set the default rating to 0 instead of 3.

	* lib/alexandria/book_providers/bn.rb:

	Added.

	* lib/alexandria/book_providers.rb:

	- Includes the BN provider.
	- Moved the HTTP proxy code there;
	- Introduced GenericProvider#fullname. 

	* lib/alexandria/book_providers/amazon.rb:

	- Removed the GLib.convert call, that seems unnecessary ;
	- Follow changes in book_provider.rb.

	* lib/alexandria/book_providers/proxis.rb,